THRIFT-5260 Fix the thrift compiler generate problematic lua code for the oneway method Client: lua Patch: longzhiri <persistentsnail@gmail.com>

This closes #2212

The oneway method's processor has no need to write the result to client, but it is necessary to return values of each handler's return.